Fixing the room name error message display on mobile

--- a/web/less/landing.less
+++ b/web/less/landing.less
@@ -174,6 +174,7 @@ body {
 
       @media @smartphonesPortrait {
         font-size: 12px;
+        background-color: #00000099;
       }
 
       @media @smartphonesLandscape {
@@ -191,15 +192,19 @@ body {
 
     .error-room {
       margin: 0 356px 0 0;
-      @media @smartphonesPortrait {
-        margin: 0 0 0 0;
-      }
       position: relative;
       font-size: 16px;
       width: 100%;
       bottom: 98px;
       border-bottom: solid 1px #ed5654;
       line-height: 38px;
+      @media @smartphonesPortrait {
+        margin: 0 0 0 0;
+        font-size: 13px;
+        line-height: 17px;
+        border-bottom: none;
+        bottom: 120px;
+      }
     }
 
     &.error {
